# beard_api

./: README.md  pyproject.toml  Диаграмма без названия.drawio
.github/workflows/: django.yml
beard/: Procfile  db.sqlite3
beard/api/: models.py  router.py  serializers.py  views.py
beard/api/migrations/: 0001_initial.py  0002_rename_user_id_post_userid_comment.py  0003_album.py  0004_photo.py  0005_remove_photo_color.py  0006_remove_photo_grayscale.py  0007_todo.py
beard/beard/: settings.py  urls.py
